# slimta-deprecated

./: .gitignore  Makefile.am  README  configure.ac
doc/: api.rst  base64.luadoc  bus.luadoc  bus.proxy.luadoc  conf.py  edge.http.luadoc  edge.smtp.auth.luadoc  edge.smtp.luadoc  hmac.luadoc  index.rst  installation.rst  license.rst  manual.rst  message.bounce.luadoc  message.client.luadoc  message.contents.luadoc  message.envelope.luadoc  message.luadoc  message.response.luadoc  policies.add_date_header.luadoc  policies.add_message_id_header.luadoc  policies.add_received_header.luadoc  policies.forward.luadoc  queue.luadoc  relay.luadoc  relay.maildrop.luadoc  relay.smtp.luadoc  rlimit.luadoc  routing.mx.luadoc  routing.static.luadoc  signalfd.luadoc  slimta.luadoc  storage.luadoc  storage.session.luadoc  uuid.luadoc  xml.luadoc  xml.reader.luadoc  xml.writer.luadoc
doc/_static/: agogo.css
doc/api/: slimta.base64.rst  slimta.bus.proxy.rst  slimta.bus.rst  slimta.edge.http.rst  slimta.edge.rst  slimta.edge.smtp.auth.rst  slimta.edge.smtp.rst  slimta.hmac.rst  slimta.message.bounce.rst  slimta.message.client.rst  slimta.message.contents.rst  slimta.message.envelope.rst  slimta.message.response.rst  slimta.message.rst  slimta.policies.add_date_header.rst  slimta.policies.add_message_id_header.rst  slimta.policies.add_received_header.rst  slimta.policies.forward.rst  slimta.policies.rst  slimta.policies.spamassassin.rst  slimta.queue.rst  slimta.relay.maildrop.rst  slimta.relay.rst  slimta.relay.smtp.rst  slimta.routing.rst  slimta.rst  slimta.signalfd.rst  slimta.storage.rst  slimta.storage.session.rst  slimta.uuid.rst  slimta.xml.reader.rst  slimta.xml.rst  slimta.xml.writer.rst
doc/html/: index.html
doc/manual/: architecture.rst  bounces.rst  buildingblocks.rst  bus.rst  contents.rst  edge.rst  messages.rst  policies.rst  queue.rst  ratchet.rst  relay.rst  responses.rst  routing.rst  storage.rst  system.rst  terminology.rst
etc/: Makefile.am  config.lua  slimedge.conf  slimqueue.conf  slimrelay.conf  slimta.conf
etc/conf.d/: configs.conf  ssl.conf  storage.conf
etc/slimedge/: config.lua
etc/slimqueue/: config.lua
etc/slimrelay/: config.lua
examples/: flush_queue.lua  full_mta.lua  http_mta.lua  proxy.lua  queue_only.lua  redis_store_load.lua  send_http.lua
lib/: Makefile.am  xml_wrapper.lua
main/: Makefile.am  main.c  myconfig.c  myconfig.h  setup.lua  slimaster.c  slimedge.c  slimqueue.c  slimrelay.c  slimta.c  slimta.h  uuid.h  xml.c  xml.h
modules/: Makefile.am
modules/engines/: Makefile.am
modules/protocols/: Makefile.am
slimaster/: Makefile.am  slimaster.c
slimaster/lua/: slimaster.lua
slimcommon/: Makefile.am  globals.c  globals.h  main.c  misc.c  rlimit.c  rlimit.h  slimcommon.c  slimcommon.h  uuid.c  xml.c
slimcommon/lua/: Makefile.am  blackhole_storage.lua  couchdb_storage.lua  http_connection.lua  http_server.lua  local_storage.lua  xml_wrapper.lua
slimdisk/: Makefile.am  slimdisk.c
slimdisk/lua/: Makefile.am  config.lua  storage_request.lua
slimedge/: Makefile.am  queue_request_context.lua  setup.lua  slimedge.c
slimedge/lua/: Makefile.am  httpmail_context.lua  (+2 more)
slimqueue/: Makefile.am  attempt_timer_context.lua  config.lua  generate_bounce.lua  header_generation.lua  main.lua  message_wrapper.lua  queue_request_context.lua  relay_request_context.lua  relay_results_context.lua  setup.lua  slimqueue.c  storage_request.lua
slimqueue/lua/: Makefile.am  attempt_timer_context.lua  bounce_request_context.lua  config.lua  couchdb_queue.lua  generate_bounce.lua  main.lua  mx_nexthop.lua  queue_request_context.lua  relay_request_context.lua  relay_results_context.lua  slimqueue.lua
slimrelay/: Makefile.am  config.lua  local_storage.lua  main.lua  message_results.lua  request_context.lua  results_context.lua  session_results.lua  setup.lua  slimrelay.c  slimrelay.h  smtp_context.lua  smtp_session.lua  smtp_states.lua  storage_engines.lua
slimrelay/lua/: Makefile.am  config.lua  local_storage.lua  main.lua  message_results.lua  request_context.lua  results_context.lua  slimrelay.lua  smtp_context.lua  smtp_data.lua  smtp_encrypt.lua  smtp_relay.lua  smtp_session.lua  smtp_states.lua
src/c/: Makefile.am  base64.c  config_.c  hmac.c  misc.c  misc.h  rlimit.c  signalfd.c  slimta.c  slimta.h  uuid.c  xml.c
src/lua/: Makefile.am  json.lua
src/lua/bus/: client.lua  init.lua  proxy.lua  server.lua
src/lua/edge/: http.lua  init.lua  mock_queue_channel.lua  queue_channel.lua  smtp.lua
src/lua/edge/smtp/: auth.lua  auth_mechanisms.lua  init.lua
src/lua/message/: bounce.lua  client.lua  contents.lua  envelope.lua  header_folding.lua  init.lua  response.lua
src/lua/policies/: add_date_header.lua  add_message_id_header.lua  add_received_header.lua  forward.lua
src/lua/policies/spamassassin/: init.lua  spamc.lua
src/lua/queue/: init.lua
src/lua/queue/policies/attempting/: linear.lua
src/lua/queue/policies/headers/: date_header.lua
src/lua/relay/: init.lua  maildrop.lua  maildrop_session.lua  smtp.lua  smtp_session.lua
src/lua/routing/: mx.lua  static.lua
src/lua/storage/: couchdb.lua  memory.lua
src/lua/storage/redis/: driver.lua  init.lua  session.lua  try_driver.lua
src/lua/xml/: reader.lua  writer.lua
test/: Makefile.am  test_add_date_header.lua  test_add_message_id_header.lua  test_add_received_header.lua  test_base64.lua  test_bus_client_server.lua  test_bus_local.lua  test_edge_http_listener.lua  test_edge_queue_channel.lua  test_edge_smtp_auth.lua  test_edge_smtp_listener.lua  test_edge_smtp_starttls_listener.lua  test_edge_smtp_tls_listener.lua  test_edge_to_relay.lua  test_message_add_headers.lua  test_message_copy.lua  test_message_delete_headers.lua  test_message_from_xml.lua  test_message_header_folding.lua  test_message_to_xml.lua  test_queue_defer_retry_later.lua  test_queue_defer_retry_now.lua  test_queue_relay_bounce.lua  test_queue_relay_defer.lua  test_queue_store_only.lua  test_queue_store_relay.lua  test_relay_smtp_relayer.lua  test_spamassassin.lua  test_xml_reader.lua  test_xml_writer.lua
(+88 files in other folders)
