pkgsysconfdir = $(sysconfdir)/slimta

dist_pkgsysconf_DATA = config.lua

loc1dir = $(pkgsysconfdir)/slimrelay/
dist_loc1_DATA = slimrelay/config.lua

loc2dir = $(pkgsysconfdir)/slimqueue/
dist_loc2_DATA = slimqueue/config.lua

loc3dir = $(pkgsysconfdir)/slimedge/
dist_loc3_DATA = slimedge/config.lua

