
luasrcdir = @LUA_LPATH@/slimta/
nobase_dist_luasrc_DATA = relay/smtp_session.lua \
			  relay/init.lua \
			  relay/smtp.lua \
			  message/response.lua \
			  message/header_folding.lua \
			  message/init.lua \
			  message/contents.lua \
			  message/envelope.lua \
			  message/client.lua \
			  storage/memory.lua \
			  storage/redis/init.lua \
			  storage/redis/driver.lua \
			  edge/http.lua \
			  edge/smtp.lua \
			  policies/add_date_header.lua \
			  policies/add_received_header.lua \
			  routing/mx.lua \
			  routing/static.lua \
			  xml/reader.lua \
			  xml/writer.lua \
			  queue/init.lua \
			  bus/server.lua \
			  bus/init.lua \
			  bus/client.lua

